2005-02-17  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Catch %n (and related) in Description

2005-02-17  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: be sure that the pre-expansion of conditionals
	is only applied to ones containing "%{Distribution}"
	* Bootstrap.pm, SelfUpdate.pm: move the list of additional packages 
	to be installed to a new function in Bootstrap.pm, which can be
	shared by both modules.  Add a warning when "fink selfupdate" is
	run with an unsupported version of perl.
	* Bootstrap.pm: update modules needed for bootstrapping in 10.2-gcc3.3

2005-02-15  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: add new general-purpose get_depends method,
	rewrite set_buildlock to use it
	* Engine.pm: rewrite show-deps functions to use get_depends

2005-02-13  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* NetAccess.pm: Remove code whose only obvious purpose is to cause
	breakage.

2005-02-13  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: allow the creation of several .info
	files from a single .info.in, depending on %{Distribution};
	reorganize some functions to accomodate dist-module.pl

2005-02-12  Peter O'Gorman  <ogorman@users.sourceforge.net>

	* Bootstrap.pm (check_host): We work on 10.3.8.

2005-02-09  Chris Dolan <chrisdolan@users.sourceforge.net>

	* Engine.pm: improvements for snapshot command

2005-02-09  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: lol_remove_self(): skip clusters after removing them

2005-02-09  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Rewrite show_deps_display_list using lol_remove_self().
	* PkgVersion.pm: Implement lol_remove_self() (also handles Provides).
	* Services.pm: Implement cleanup_lol().

2005-02-08  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Fix plural in package count msg.
	* Configure.pm: Rework proxy prompting: consolidate whole msg into
	$prompt, add note about value visibility, clean up variable usage.